Bug 549268: Ensure we pass a unique fontFileReferenceKey to DWrite for downloadable fonts. r=jdaggett