gfx/thebes/src/gfxDWriteCommon.h
@@ -48,6 +48,7 @@
 #include "gfxFontConstants.h"
 #include "nsTArray.h"
 #include "gfxWindowsPlatform.h"
+#include "nsIUUIDGenerator.h"
 
 #include <windows.h>
 #include <dwrite.h>
@@ -106,6 +107,11 @@ FontStretchFromDWriteStretch(DWRITE_FONT_STRETCH aStretch)
     }
 }
 
+struct ffReferenceKey
+{
+    nsTArray<PRUint8> *mArray;
+    nsID mGUID;
+};
 
 class gfxDWriteFontFileLoader : public IDWriteFontFileLoader
 {
